landingpage header links added & pos fixed on mobile

--- a/assets/scss/6-components/_banner.scss
+++ b/assets/scss/6-components/_banner.scss
@@ -7,7 +7,14 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 300px;
+
+  .banner-inner {
+    z-index: 999999;
+  }
+  @media all and (max-width: 959px) {
+    height: 200px;
+  }
+
 
   /*
   form {
@@ -38,6 +45,14 @@
     }
     transition: top .5s ease-in-out;
   }
+
+  .header-bar {
+    h1 {
+      @media all and (max-width: 959px) {
+        background: var(--primary-color-dark);
+      }
+    }
+  }
 }
 
 .site-search-form {
@@ -45,12 +60,12 @@
   margin: 0 auto;
 
   position: relative;
-  top: 57px;
+  top: 56px;
   left: 0;
   right: 0;
   transition: top .5s ease-in-out;
   @media (min-width: 960px) {
-    top: 20%;
+    top: 120px;
     position: absolute;
     left: 0;
     right: 0;
